[gd_scene load_steps=8 format=3 uid="uid://bti5458kp6dy4"]

[ext_resource type="Theme" uid="uid://cw45l3bp8f0il" path="res://ui/Themes/my_theme.tres" id="1_lpmow"]
[ext_resource type="Script" path="res://Scenes/MainMenu/main_menu.gd" id="2_8oj4s"]
[ext_resource type="PackedScene" uid="uid://ci0lql3qqjhfx" path="res://ui/ConfirmModal/confirm_modal.tscn" id="3_77t5v"]
[ext_resource type="PackedScene" uid="uid://cy2cvntqgckn8" path="res://Scenes/SettingsMenu/settings_menu.tscn" id="4_x1ffm"]

[sub_resource type="Gradient" id="Gradient_pkar4"]
offsets = PackedFloat32Array(0, 0.701299, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0.356863, 0.772549, 1, 0.6, 1, 1, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_hlh0l"]
noise_type = 2
frequency = 0.0644
fractal_type = 2
fractal_weighted_strength = 1.0
cellular_distance_function = 1
cellular_return_type = 2

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_mrkqe"]
width = 2048
height = 2048
normalize = false
color_ramp = SubResource("Gradient_pkar4")
noise = SubResource("FastNoiseLite_hlh0l")

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
theme = ExtResource("1_lpmow")
script = ExtResource("2_8oj4s")

[node name="Menu" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("NoiseTexture2D_mrkqe")
stretch_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -332.0
offset_top = -329.5
offset_right = 332.0
offset_bottom = 329.5
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"RootPanelContainer"

[node name="MarginContainer" type="MarginContainer" parent="Menu/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TitleLabel" type="Label" parent="Menu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_lpmow")
theme_type_variation = &"HugeLabel"
theme_override_font_sizes/font_size = 150
text = "MyPong"
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="Menu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PlayButton" type="Button" parent="Menu/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HugeButton"
text = "Play"

[node name="SettingsButton" type="Button" parent="Menu/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HugeButton"
text = "Settings
"

[node name="ExitButton" type="Button" parent="Menu/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HugeButton"
text = "Quit"

[node name="ConfirmModal" parent="." instance=ExtResource("3_77t5v")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="SettingsMenu" parent="." instance=ExtResource("4_x1ffm")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[connection signal="pressed" from="Menu/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Menu/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Menu/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
